<resources>
    <!-- Application Name -->
    <string name="app_name">CheckMate</string>

    <!-- Application Version -->
    <string name="app_version">1.4.1</string>

    <!-- Application Easter Egg Message -->
    <string name="app_easter_egg">You are now a developer :D</string>

    <!-- Application Shortcuts -->
    <string name="shortcut_new_task">New Task</string>

    <!-- Application Quick Tiles -->
    <string name="tile_new_task">New Task</string>

    <!-- Empty notes -->
    <string name="empty_notes">Empty notes.</string>

    <!-- Empty task title error -->
    <string name="empty_name">Name field is required.</string>

    <!-- Place Holder Strings -->
    <string name="placeholder_item_task_date_created">Monday, 22 July 2024</string>
    <string name="placeholder_item_task_name">Lorem Ipsum</string>
    <string name="placeholder_item_task_notes">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="placeholder_item_task_last_edited">a few moments ago</string>
    <string name="placeholder_item_task_priority">No Priority</string>
    <string name="placeholder_item_task_complete_btn">Complete</string>

    <!-- Toolbar Texts -->
    <string name="toolbar_main">All Tasks</string>
    <string name="toolbar_create">New Task</string>
    <string name="toolbar_edit">Edit Task</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_completed">Completed Tasks</string>

    <!-- List Theme Settings -->
    <string-array name="list_theme">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="list_theme_values">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- List Libraries Settings -->
    <string-array name="list_libraries">
        <item>PrettyTime</item>
        <item>Work Manager</item>
    </string-array>

    <!-- Illustration Empty Texts -->
    <string name="illustration_empty_task">You currently have no task.</string>
    <string name="illustration_empty_completed_tasks">You currently have no completed task.</string>

    <!-- External Links-->
    <string name="website_github">https://github.com/eipna/CheckMate</string>
    <string name="website_pretty_time">https://www.ocpsoft.org/prettytime/</string>
    <string name="website_work_manager">https://developer.android.com/develop/background-work/background-tasks/persistent/getting-started</string>

    <!-- Clear Completed Task Dialog -->
    <string name="dialog_clear_completed_task_name">Clear all completed tasks</string>
    <string name="dialog_clear_completed_task_message">This operation will delete all completed tasks.</string>
    <string name="dialog_clear_completed_task_cancel">Cancel</string>
    <string name="dialog_clear_completed_task_clear">Clear</string>

    <!-- Set Task As Complete Dialog -->
    <string name="dialog_complete_task_name">Set task as complete</string>
    <string name="dialog_complete_task_message">This will set the task as completed, this operation is irreversible.</string>
    <string name="dialog_complete_task_cancel">Cancel</string>
    <string name="dialog_complete_task_ok">Okay</string>

    <!-- Option Menu String -->
    <string name="menu_clear_all">Clear All</string>
    <string name="menu_completed_tasks">Completed Tasks</string>
    <string name="menu_share">Share Notes</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_sort">Sort by</string>
    <string name="menu_sortAZ">Name (A to Z)</string>
    <string name="menu_sortZA">Name (Z to A)</string>
    <string name="menu_sort_date_created_asc">Created (Latest)</string>
    <string name="menu_sort_date_created_desc">Created (Oldest)</string>
    <string name="menu_sort_edit_asc">Edited (Latest)</string>
    <string name="menu_sort_edit_desc">Edited (Oldest)</string>

    <string name="menu_filter_text">Filter by</string>
    <string name="menu_filter_high">High</string>
    <string name="menu_filter_medium">Medium</string>
    <string name="menu_filter_low">Low</string>
    <string name="menu_filter_no_priority">No Priority</string>
    <string name="menu_filter_default">No Filter</string>

    <!-- Text Input Layout Fields -->
    <string name="input_task_name">Name</string>
    <string name="input_task_notes">Notes</string>
    <string name="input_task_date_created">Date Created</string>

    <!-- Button Texts -->
    <string name="button_create_task">Create task</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>

    <!-- Chips and Chip Groups -->
    <string name="chip_header_text">Choose Priority Level</string>
    <string name="chip_priority_high">High</string>
    <string name="chip_priority_medium">Medium</string>
    <string name="chip_priority_low">Low</string>
    <string name="chip_priority_default">No Priority</string>

    <!-- Task More Options Menu -->
    <string name="menu_more_options_complete">Complete</string>
    <string name="menu_more_options_delete">Delete</string>
</resources>