<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemTaskCard"
    app:cardUseCompatPadding="true"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/TaskItemCard">

    <LinearLayout
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTaskName"
                android:text="@string/placeholder_item_task_name"
                android:layout_weight="1"
                style="@style/TaskItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/itemTaskDateCreatedIMG"
                android:src="@drawable/date"
                style="@style/TaskItemDateCreatedImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTaskDateCreated"
                android:text="@string/placeholder_item_task_date_created"
                style="@style/TaskItemDateCreatedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/itemTaskPriorityIMG"
                android:src="@drawable/priority"
                style="@style/TaskItemDateCreatedImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTaskPriority"
                android:text="@string/placeholder_item_task_priority"
                style="@style/TaskItemDateCreatedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/itemTaskDivider"
            android:layout_marginTop="15dp"
            style="@style/TaskItemDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/itemTaskCompleteBTN"
                android:text="Complete"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/itemTaskLastEdited"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/placeholder_item_task_last_edited"
                style="@style/TaskItemLastEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>